--- a/Classification_EnsembleMethods/Classification_VariousModels.ipynb
+++ b/Classification_EnsembleMethods/Classification_VariousModels.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labelEncoder = LabelEncoder()\n",
+    "labelEncoder = skl.preprocessing.LabelEncoder()\n",
     "for i in [0,3,4,5,6,8,9,11,12]:\n",
     "    # Para cada columna con datos categoricos, cambiar datos a numeros\n",
     "    attribute = labelEncoder.fit_transform(X_cre[i])\n",
